# statistics

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  init.csh  logo.txt
cmake-modules/: PlatformAbstraction.cmake  logo.txt
src/: CMakeLists.txt  test.f90
src/modules/: CMakeLists.txt  kind_parameters_mod.f90  statistical_accessors_smod.f90  statistical_data_mod.f90  statistical_kurtosis_smod.f90  statistical_mean_smod.f90  statistical_median_smod.f90  statistical_skewness_smod.f90  statistical_std_dev_smod.f90  statistical_variance_smod.f90
